// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user list doesn't try to render users on error 1`] = `
<div>
  <h2
    className="sc-fznKkj hRHxK"
  >
    Users
  </h2>
  <div
    className="sc-fznZeY SPqpd"
  />
</div>
`;

exports[`user list renders correctly 1`] = `
<div>
  <h2
    className="sc-fznKkj hRHxK"
  >
    Users
  </h2>
  <div
    className="sc-fznZeY SPqpd"
  />
</div>
`;

exports[`user list renders correctly 2`] = `
<div>
  <h2
    className="sc-fznKkj hRHxK"
  >
    Users
  </h2>
  <div
    className="sc-fznZeY SPqpd"
  >
    <div
      className="sc-fzoLsD ffqgCm"
    >
      <p
        className="sc-fzpans kEnlFJ"
      >
        test
      </p>
      <button
        className="sc-AxjAm sc-AxirZ sc-fznyAO iiOVWb"
        onClick={[Function]}
      >
        delete
      </button>
    </div>
    <div
      className="sc-fzoLsD ffqgCm"
    >
      <p
        className="sc-fzpans kEnlFJ"
      >
        admin
      </p>
      <p
        className="sc-fzplWN dkHTim"
      >
        admin
      </p>
    </div>
  </div>
</div>
`;
